--- a/index.html
+++ b/index.html
@@ -6,14 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to Speech</title>
     <style>
+        *{
+            padding: 0;
+            margin: 0;box-sizing: border-box;
+        }
+
+        html, body{
+            width: 100%;
+            height: 100%;
+        }
         .main {
             display: flex;
             justify-content: center;
+            flex-direction: column;
             align-items: center;
-            margin: 110px auto;
-            width: 500px;
-            height: 100px;
-            background-color: red;
+            margin:  auto;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            background-image: linear-gradient(
+  65deg,
+  hsl(240deg 100% 20%) 0%,
+  hsl(275deg 100% 19%) 6%,
+  hsl(294deg 100% 18%) 13%,
+  hsl(311deg 100% 20%) 19%,
+  hsl(321deg 100% 23%) 25%,
+  hsl(327deg 100% 25%) 31%,
+  hsl(334deg 92% 28%) 37%,
+  hsl(345deg 65% 34%) 44%,
+  hsl(356deg 51% 39%) 50%,
+  hsl(6deg 48% 41%) 56%,
+  hsl(14deg 49% 41%) 63%,
+  hsl(21deg 47% 42%) 69%,
+  hsl(27deg 44% 43%) 75%,
+  hsl(33deg 39% 45%) 81%,
+  hsl(39deg 33% 47%) 87%,
+  hsl(46deg 26% 49%) 94%,
+  hsl(54deg 21% 52%) 100%
+);
+        }
+        h1{
+            margin-bottom: 1vw;
+            background: #140AA6;
+background: linear-gradient(to right, #140AA6 0%, #ddb0a9 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+text-transform: capitalize;
+
         }
 
         .card {
@@ -21,16 +60,32 @@
             align-items: center;
             justify-content: space-between;
             gap: 10px;
+            border: 1px solid gray;
+            padding: 5vw 10vw;
+            border-radius: 10px;
+            background: rgba( 255, 255, 255, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 8px );
+-webkit-backdrop-filter: blur( 8px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
         }
 
         input,
         button {
             padding: 10px 20px;
             font-size: 20px;
-            border: none;
+            border: 1px solid gray;
             border-radius: 10px;
             font-family: Arial, Helvetica, sans-serif;
             cursor: pointer;
+            background-color: aquamarine;
+            transition: cubic-bezier(0.075, 0.82, 0.165, 1) .5s;
+        }
+
+        button:hover{
+background-color: rgb(202, 81, 81) ;
+            box-shadow: 0 0 20px 20px rgb(202, 81, 81);
         }
     </style>
 </head>
@@ -40,8 +95,8 @@
 
 
     <div class="main">
+        <h1>Text to speech</h1>
         <div class="card">
-
             <input type="search" id="input" placeholder="Enter  any Text">
             <button type="button" onclick="speech()">Submit</button>
 
